Add only_link Var to posts

--- a/src/content/posts/2-django-admin-advanced-techniques-for-organizing-renaming-and-customizing-admin-models.mdx
+++ b/src/content/posts/2-django-admin-advanced-techniques-for-organizing-renaming-and-customizing-admin-models.mdx
@@ -6,7 +6,8 @@ image: "/images/posts/post2/main.png"
 categories: ["Django"]
 authors: ["Mina Atef"]
 tags: ["django","django admin", "python", "web development"]
-draft: true
+draft: false
+only_link: true
 ---
 
 # A dive into the Django admin (Part 2)
