--- a/src/content/posts/1-django-admin-creating-and-customizing-multiple-admin-sites.mdx
+++ b/src/content/posts/1-django-admin-creating-and-customizing-multiple-admin-sites.mdx
@@ -7,6 +7,7 @@ categories: ["Django"]
 authors: ["Mina Atef"]
 tags: ["django","django admin", "python", "web development"]
 draft: false
+only_link: false
 ---
 
 
