--- a/src/content/posts/4-ONLY_LINK-what-i-learnt-building-a-data-streaming-multi-currency-accounting-ledger.mdx
+++ b/src/content/posts/4-ONLY_LINK-what-i-learnt-building-a-data-streaming-multi-currency-accounting-ledger.mdx
@@ -2,7 +2,7 @@
 title: "What I Learned Building a Data Streaming Multi-Currency Accounting Ledger"
 description: "Join me on a journey through the process of building a data streaming multi-currency accounting ledger "
 date: 2024-06-19T15:00:00Z
-image: "/images/posts/post3/main.png"
+image: "/images/posts/post4/main.jpeg"
 categories: ["Django"]
 authors: ["Mina Atef"]
 tags: ["ledger", "python", "web development"]
