--- a/src/content/posts/2-ONLY_LINK-django-admin-advanced-techniques-for-organizing-renaming-and-customizing-admin-models.mdx
+++ b/src/content/posts/2-ONLY_LINK-django-admin-advanced-techniques-for-organizing-renaming-and-customizing-admin-models.mdx
@@ -7,7 +7,7 @@ categories: ["Django"]
 authors: ["Mina Atef"]
 tags: ["django","django admin", "python", "web development"]
 draft: false
-only_link: true
+only_link: false
 ---
 
 # A dive into the Django admin (Part 2)
