--- a/src/content/posts/6-ONLY_LINK-django-admin-handling-multiple-admin-between-microservices.mdx
+++ b/src/content/posts/6-ONLY_LINK-django-admin-handling-multiple-admin-between-microservices.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Building your own pubsub using Django and Postgres"
-description: "In this article, we'll explore how to build a simple pubsub system using Django and Postgres."
+title: "Microservices: Handling Multiple Admin Sites in Django Admin"
+description: "In this article, we'll explore how to handle multiple admin sites in Django admin when working with microservices."
 date: 2024-06-19T15:00:00Z
 image: "/images/posts/post3/main.png"
 categories: ["Django"]
